--- a/_data/fa24/course.yml
+++ b/_data/fa24/course.yml
@@ -16,7 +16,7 @@ office_hours:
 
 announcement:
   color: green
-  text: 
+  text: Checkout the calander page for office hour times and locations. Lecture slides, demos and our geneal course plan is on this home page. For due dates always refer to Gradescope. 
 
 discussion_sections:
   - section: A00
