fix_broken_link

--- a/_data/fa24/calendar.yml
+++ b/_data/fa24/calendar.yml
@@ -21,7 +21,7 @@
 - week: 1
   title: "Week 1 - Relational Data Model & SQL Basics<br>
     <small>
-      📘 Read <a href='#'>The Relational Data Model</a>.<br>
+      📘 Read <a href='https://ucsd.s3.us-west-2.amazonaws.com/dsc100/readings/The_Relational_Data_Model_ch7.pdf'>The Relational Data Model</a>.<br>
       🍿 Watch <a href='https://www.youtube.com/watch?v=et1n7-UxI2M'>IBM's What is SQL video</a>.<br>
       🍿 Watch <a href='https://www.youtube.com/watch?v=Q5aTUc7c4jg'>IBM's SQL vs. NOSQL video</a>.<br>
       🍿 Watch <a href='https://www.youtube.com/watch?v=E9AgJnsEvG4'>IBM's Relational vs. NR Database video</a>.<br>
