--- a/_data/fa24/calendar.yml
+++ b/_data/fa24/calendar.yml
@@ -45,6 +45,7 @@
         - label: DISC
           type: disc
           title: Discussion Section
+          walkthrough: https://drive.google.com/file/d/1nrJud4U3TOlG2SRjqsBiBnh2UyI1eL-g/view?usp=sharing
     - date: "2024-10-03"
       in_class: true
       events:
