--- a/_data/fa24/calendar.yml
+++ b/_data/fa24/calendar.yml
@@ -117,7 +117,7 @@
         - label: DEMO
           type: demo
           title: 06_aggregation_and_grouping
-          # solutions: https://ucsd.s3.us-west-2.amazonaws.com/dsc100/demos/06_aggregation_and_grouping.pdf
+          solutions: https://ucsd.s3.us-west-2.amazonaws.com/dsc100/demos/06_aggregation_and_grouping.pdf
           template: https://ucsd.s3.us-west-2.amazonaws.com/dsc100/demos/06_aggregation_and_grouping_student.pdf
         - label: QUIZ
           type: quiz
@@ -128,6 +128,7 @@
         - label: DISC
           type: disc
           title: Discussion Section
+          walkthrough: https://docs.google.com/presentation/d/1Avb2zCGEb_eTJBHtiZBgsbeQrXBjMGi5yKs9qiJoIaU/edit?usp=sharing
     - date: "2024-10-17"
       in_class: true
       events:
