--- a/_data/fa24/calendar.yml
+++ b/_data/fa24/calendar.yml
@@ -187,6 +187,7 @@
           type: lecture
           title: 10_intro_relational_algebra
           slides: https://ucsd.s3.us-west-2.amazonaws.com/dsc100/lectures/10_intro_relational_algebra.pdf
+          recording: https://youtu.be/DujKsFdWeTc
         - label: DEMO
           type: demo
           title: 09_relax_relational_algebra_pt1
@@ -205,6 +206,7 @@
           type: lecture
           title: 11_relational_algebra
           slides: https://ucsd.s3.us-west-2.amazonaws.com/dsc100/lectures/11_relational_algebra.pdf
+          recording: https://youtu.be/a5gzR33TlvI 
         - label: DEMO
           type: demo
           title: 10_relax_relational_algebra_pt2
