--- a/_data/fa24/calendar.yml
+++ b/_data/fa24/calendar.yml
@@ -187,7 +187,7 @@
           type: lecture
           title: 10_intro_relational_algebra
           slides: https://ucsd.s3.us-west-2.amazonaws.com/dsc100/lectures/10_intro_relational_algebra.pdf
-          TA_slides: https://drive.google.com/file/d/1uTeZJSj9MXhz_RDeG_O9yRfwtzuhDDvb/view?usp=drive_link
+          ta_slides: https://drive.google.com/file/d/1uTeZJSj9MXhz_RDeG_O9yRfwtzuhDDvb/view?usp=drive_link
           recording: https://youtu.be/DujKsFdWeTc
         - label: DEMO
           type: demo
