--- a/_data/fa24/calendar.yml
+++ b/_data/fa24/calendar.yml
@@ -192,7 +192,7 @@
         - label: DEMO
           type: demo
           title: 09_relax_relational_algebra_pt1
-          # solutions: https://ucsd.s3.us-west-2.amazonaws.com/dsc100/demos/09_set_ops_relax_ra.pdf
+          solutions: https://ucsd.s3.us-west-2.amazonaws.com/dsc100/demos/09_set_ops_relax_ra.pdf
           template: https://ucsd.s3.us-west-2.amazonaws.com/dsc100/demos/09_set_ops_relax_ra_student.pdf 
     - date: "2024-10-30"
       in_class: true
