--- a/_data/fa24/calendar.yml
+++ b/_data/fa24/calendar.yml
@@ -139,7 +139,7 @@
         - label: DEMO
           type: demo
           title: 07_subqueries_nested_queries
-          # solutions: https://ucsd.s3.us-west-2.amazonaws.com/dsc100/demos/07_subqueries_nested_queries.pdf
+          solutions: https://ucsd.s3.us-west-2.amazonaws.com/dsc100/demos/07_subqueries_nested_queries.pdf
           template: https://ucsd.s3.us-west-2.amazonaws.com/dsc100/demos/07_subqueries_nested_queries_student.pdf 
         - label: HW 3
           type: hw
