--- a/_data/fa24/calendar.yml
+++ b/_data/fa24/calendar.yml
@@ -287,12 +287,12 @@
         - label: LECT
           type: lecture
           title: 14_conceptual_design
-          # slides: https://ucsd.s3.us-west-2.amazonaws.com/dsc100/lectures/14_conceptual_design.pdf
+          slides: https://ucsd.s3.us-west-2.amazonaws.com/dsc100/lectures/14_conceptual_design.pdf
         - label: DEMO
           type: demo
           title: 14_conceptual_design
           # solutions: https://ucsd.s3.us-west-2.amazonaws.com/dsc100/demos/14_conceptual_design.pdf
-          # template: https://ucsd.s3.us-west-2.amazonaws.com/dsc100/demos/14_conceptual_design_student.pdf
+          template: https://ucsd.s3.us-west-2.amazonaws.com/dsc100/demos/14_conceptual_design_student.pdf
 
 - week: 8
   title: "Week 8 - Coneptual Design & Design Theory<br>"
