--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ destination: docs/
 title: DSC 100
 email: kshannon@ucsd.edu
 description: >- # this means to ignore newlines until "baseurl:"
-  DSC 100, Fall 2024 at UC San Diego
+  DSC 100, Fall 2025 at UC San Diego
 tagline: Intro to Data Management
 # domain: ucsd-dsc100.github.io
 url: https://kshannon-ucsd.github.io
@@ -65,14 +65,14 @@ exclude:
 # Aux link for the upper right navigation
 aux_links:
   # "Template Repository": "https://www.github.com/kshannon/ucsd-dsc40a"
-  "🙋 Ed": "https://edstem.org"
+  "🙋 Piazza": "https://piazza.com/"
   "💯 Gradescope": "https://www.gradescope.com"
 
 # Makes Aux links open in a new tab. Default is false
 aux_links_new_tab: true
 
 # Change this to choose where to pick data from
-data_folder: fa24
+data_folder: fa25
 
 # Config JTD UI elements here
 # Color scheme currently only supports "dark", "light"/nil (default), or a custom scheme that you define
