--- a/_data/fa25/staff.yml
+++ b/_data/fa25/staff.yml
@@ -21,10 +21,10 @@
   email: jaguirrechavez@ucsd.edu 
   role: TA 
   photo: https://drive.google.com/file/d/1aljfAvH-Nbhp3-AZ50mvjVgtSz_u1Zg_/view?usp=sharing
-  description: Most Excellent TA & Grad Student!
+  description: Data Science PhD student -- 👀-🗣️ models for medical imaging 
   hometown: Mexico
-  askabout: Biomedical Imaging and Data Science
-  food: Some food XD
+  askabout: Tacos connoisseur, surfing amateur, running enthusiast
+  food: Tacos, Korean BBQ, bubble tea
 
 - name: Owen Miller - Tutor
   email: omiller@ucsd.edu
