--- a/_data/fa25/staff.yml
+++ b/_data/fa25/staff.yml
@@ -2,7 +2,7 @@
   email: kshannon@ucsd.edu
   role: Instructor
   website: https://www.kmshannon.com/about/
-  photo: https://ucsd.s3.us-west-2.amazonaws.com/staff/photos/kshannon_2.jpg
+  photo: https://ucsd.s3.us-west-2.amazonaws.com/staff/photos/kshannon_5.jpeg
   description: Neuroscience → Data Science @ UCSD x2 (recursive pain)
   hometown: San Diego, Cali
   askabout: Coffee, Likely to be found on a tennis court 🎾
