--- a/_data/fa25/calendar.yml
+++ b/_data/fa25/calendar.yml
@@ -33,6 +33,7 @@
           type: disc
           title: Discussion Section
           walkthrough: https://drive.google.com/file/d/1nrJud4U3TOlG2SRjqsBiBnh2UyI1eL-g/view?usp=sharing
+          slides: https://drive.google.com/file/d/1hs3K24IB7EQLtYYybaqQHIgYGCSLcQ0F/view?usp=sharing
     - date: "2025-09-30"
       in_class: true
       events:
