--- a/_data/fa25/staff.yml
+++ b/_data/fa25/staff.yml
@@ -8,7 +8,7 @@
   askabout: Coffee, Likely to be found on a tennis court 🎾
   food: Regent's Pizza, Charminar, Sochi Sushi, Turmeric Thai, Callie
 
-- name: Vignesh (Viggy) Palaniapan - TA
+- name: Vignesh (Viggy) Palaniappan - TA
   email: vpalaniappan@ucsd.edu
   role: TA
   photo: https://ucsd.s3.us-west-2.amazonaws.com/staff/photos/viggy.png
