Added Wk4 discussion slides
Updated the walkthrough link for the Discussion Section.

--- a/_data/fa25/calendar.yml
+++ b/_data/fa25/calendar.yml
@@ -153,7 +153,7 @@
         - label: DISC
           type: disc
           title: Discussion Section
-          walkthrough: https://docs.google.com/presentation/d/1HhGhT_KxO_XeUTq1LuFfg9I1QaOlkl4f8olI1d8eXzY/edit#slide=id.g308df17aa4b_0_0
+          walkthrough: https://drive.google.com/file/d/1RdNemtz3wOR_XpEK31ICMdOtFnKk0v4p/view?usp=sharing
     - date: "2025-10-21"
       in_class: true
       events:
