--- a/_data/fa25/calendar.yml
+++ b/_data/fa25/calendar.yml
@@ -247,6 +247,7 @@
           title: 12_data_storage_query_analysis
           slides: https://ucsd.s3.us-west-2.amazonaws.com/dsc100/lectures/12_data_storage_query_analysis.pdf
           recording: https://youtu.be/xG_tjwGoe4o
+          demo: https://youtu.be/JWkJYMA9C9k
         - label: DEMO
           type: demo
           title: 12_sql_query_optimization
