added discussion slides wk8
Updated the walkthrough link for the Discussion Section.

--- a/_data/fa25/calendar.yml
+++ b/_data/fa25/calendar.yml
@@ -304,7 +304,7 @@
         - label: DISC
           type: disc
           title: Discussion Section
-          walkthrough: https://docs.google.com/presentation/d/1JY-pZE3eQXDcL2R8-scVK_csTfz07JGmfW9Ow6Kj_hA/edit?usp=sharing
+          walkthrough: https://drive.google.com/file/d/1XQajTfOSVMje5Ckf8_3onVZZdDfU6_mI/view?usp=sharing
     - date: "2025-11-18"
       in_class: true
       events:
@@ -335,6 +335,7 @@
         - label: DISC
           type: disc
           title: Discussion Section
+          walkthrough: https://docs.google.com/presentation/d/1JY-pZE3eQXDcL2R8-scVK_csTfz07JGmfW9Ow6Kj_hA/edit?usp=sharing
     - date: "2025-11-25"
       in_class: true
       events:
